# Project.X-Server-List

./: LICENSE  main.py  pyproject.toml
app/api/: api.py
app/api/endpoints/: child_folder.py  folder.py  lists.py  schedule.py
app/crud/: crud_child_folder.py  crud_folder.py  crud_list.py  crud_mentioned_user.py  crud_schedule.py
app/db/: mysql_conn.py
app/models/: Folder.py  FolderSchedule.py  MainDivide.py  MentionedUser.py  Schedule.py  child_folder.py  folder.py  main_divide.py  mentioned_user.py  schedule.py
app/schemas/: child_folder.py  custom_response_type.py  folder.py  folder_schedule.py  list.py  main_divide.py  mentioned_user.py  schedule.py  schedulebase.py
config/: mysql_conn.py
list/: list_controller.py  list_repository.py  list_service.py
list/dto/: create_list.py
list/entity/: list_entity.py  list_repository.py
tests/: folder_test.py
