[tool.poetry]
name = "project.x-server-list"
version = "0.1.0"
description = "제주도 여행을 위한 서비스"
authors = ["asdf148 <wnduf0405_@naver.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.35"
PyMySQL = "^1.0.2"
cryptography = "^36.0.2"
pytest = "^7.1.2"
requests = "^2.27.1"
httpx = "^0.22.0"
anyio = "^3.6.1"
pytest-asyncio = "^0.18.3"
pytest-tornasync = "^0.6.0"
pytest-trio = "^0.7.0"
pytest-twisted = "^1.13.4"
Twisted = "^22.4.0"
fastapi-utils = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
asyncio_mode = "auto"
testpaths = [
    "tests",
    "integration",
]
